upgraded surefire to 2.22.0